Fix card action buttons not showing

--- a/Website/game.css
+++ b/Website/game.css
@@ -814,6 +814,7 @@ label[for="fileSelectDeckLoader"] {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	z-index: 1;
 }
 
 .fieldCardContainer:hover .cardActionHolder {
